# rust_v

./: .gitignore  Cargo.toml  LICENSE  README.md  pgo.sh
benches/: bxdf_inlines.rs
resources/: benchmarks.md  definitions.md  ray_intersection_implementations.md  todos.md
src/: bunny.rs  configuration.rs  cornell_box.rs  floats.rs  lib.rs  math.rs  mc.rs  plain_scene.rs  scene.rs  store.rs  util.rs
src/acceleration_structure/: kd_tree.rs  mod.rs  no_acceleration.rs  uniform_spatial_partition.rs
src/bxdf/: bsdf.rs  fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs  specular.rs
src/color/: Cargo.toml  cie.rs  mod.rs  srgb.rs  xyz.rs
src/color/src/: cie.rs  lib.rs  spectral.rs  srgb.rs  xyz.rs
src/demo_scenes/: cornell_box.rs  debug.rs  mod.rs  spheres.rs
src/demos/: cornell_box.rs  mod.rs  spheres.rs
src/formats/: obj.rs  tests.rs
src/geometry/: Cargo.toml  aabb.rs  capsule.rs  cube.rs  custom.rs  cylinder.rs  intersection.rs  lens.rs  mesh.rs  mod.rs  plane.rs  point.rs  ray.rs  sphere.rs  tests.rs  triangle.rs  tube.rs
src/geometry/src/: aabb.rs  bvh.rs  capsule.rs  cube.rs  cylinder.rs  lens.rs  lib.rs  mesh.rs  plane.rs  point.rs  ray.rs  sphere.rs  tests.rs  tube.rs
src/geometry/src/formats/: mod.rs  tests.rs
src/integrator/: debug_normals.rs  mod.rs  path.rs  whitted.rs
src/physics/: cie.rs  light.rs  mod.rs  rgb.rs  spectrum.rs  xyz.rs
src/render/: bsdf.rs  bvh.rs  bxdf.rs  camera.rs  emitter.rs  fast_window.rs  fresnel.rs  light.rs  material.rs  mod.rs  reflection.rs  renderer.rs  scene.rs  scene_objects.rs  shading.rs  shape.rs  transform.rs  window.rs
src/render/bxdf/: bsdf.rs  fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs  reflection.rs  sampling.rs  specular.rs
src/render/integrator/: debug_normals.rs  mod.rs  path.rs  whitted.rs
src/render/material/: mod.rs  simple_material.rs
src/render/objects/: emitter.rs  mod.rs  point.rs  receiver.rs  sphere.rs  sphere_object.rs
src/render/sampler/: mod.rs
src/sampler/: mod.rs
src/shapes/: mod.rs  sphere.rs
src/structure/: kd_tree.rs  mod.rs  uniform_spatial_partition.rs
src/util/: Cargo.toml  floats.rs  mod.rs  sorted_vec.rs
src/util/src/: floats.rs  lib.rs  math.rs  morton.rs  range_block.rs  traits.rs
