[package]
name = "rust_v"
version = "0.1.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitmask flag generator 
bitflags = ""
# cli help/parsing etc.
clap = { version = "", features = ["yaml"] }
# image loading / saving
image = ""
# num of logical / physical cpus
num_cpus = ""
# random types
rand = ""
# parallelism
rayon = ""
# live image of rendering
show-image = { version = "", features = ["image", "save"] }
# linear algebra
ultraviolet = { version = "", features = ["int" ] }

[dev-dependencies]
criterion= ""

[features]
default = ["live-window"]
live-window = []

[[bench]]
name = "bxdf_inlines"
harness = false

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
incremental = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3


[profile.dev]
opt-level = 1
incremental = true
