[package]
name = "geometry"
version = "0.2.0"
authors = ["Julius Oeftiger <j.oeftiger@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = ""
ultraviolet = ""
util = { path = "../util" }
tobj = ""
